--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1224,7 +1224,7 @@ header{
 .footer-section{
     position: relative;
     background-color: var(--e-global-color-black);
-    padding-top: 250px;
+    /* padding-top: 250px; */
     overflow: hidden;
     margin-top: -300px;
 }
