--- a/assets/css/mediaqueries.css
+++ b/assets/css/mediaqueries.css
@@ -376,7 +376,7 @@
     }
 
     .footer-section {
-        padding-top: 300px;
+        /* padding-top: 300px; */
     }
     .footer-section .footer_right_shape figure img {
         width: 285px;
